[tool.poetry]
name = "dnarecords"
version = "0.2.6"
description = "Genomics data ML ready"
authors = ["Atray Dixit, Andrés Mañas Mañas, Lucas Seninge"]
license = "MIT"
readme = "README.md"
keywords = ["DNA", "Deep Learning"]

[tool.poetry.dependencies]
hail = "^0.2.94"
tensorflow = "^2.6.0"
python = ">=3.7.1,<3.11"
pyarrow = "^8.0.0"
fastparquet = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
myst-nb = "^0.15.0"
pytest-cov = "^3.0.0"
python-semantic-release = "^7.28.1"
pylint = "^2.13.8"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
